<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_add_home"
            android:icon="@drawable/plus"
            android:title="@string/add_home" />
    </group>


    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_profile_detail"
                    android:icon="@drawable/users"
                    android:title="@string/profile_details" />
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>